# python-ml-project-boilerplates

poetry/tensorflow/fastapi/: Dockerfile  pyproject.toml
poetry/tensorflow/fastapi/app/: main.py
poetry/tensorflow/flask/: Dockerfile
